--- a/src/assets/scss/dashkit/dark/_variables-dark.scss
+++ b/src/assets/scss/dashkit/dark/_variables-dark.scss
@@ -204,3 +204,8 @@ $navbar-light-border-color: $gray-800-dark !default;
 
 $custom-switch-indicator-bg: $gray-800-dark !default;
 $custom-switch-indicator-active-bg: $white !default;
+
+
+// Tables
+
+$table-accent-bg: $gray-700-dark !default;
